@@ -31,6 +31,7 @@ ext {
     groovyVersion = System.getenv('CI_GROOVY_VERSION') ?: "2.5.6"
     isBuildSnapshot = grailsVersion.endsWith(".BUILD-SNAPSHOT")
     isTravisBuild = System.getenv().get("TRAVIS") == 'true'
+    springLoadedCommonOptions = "-Xverify:none -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
     dependencyVersions = [
         'javax.annotation-api': [
                 version: javaxAnnotationApiVersion,
@@ -42,7 +43,13 @@ ext {
                 version: micronautVersion,
                 group:'io.micronaut',
                 names:['micronaut'],
-                modules:['spring','inject','runtime', 'inject-groovy', 'runtime-groovy', 'inject-java', 'core', 'http-client', 'http', 'buffer-netty', 'http-netty']
+                modules:['spring','inject','runtime', 'inject-groovy', 'inject-java', 'core', 'http-client', 'http', 'buffer-netty', 'http-netty']
+        ],
+        'micronaut.micronaut-runtime-groovy': [
+                version: micronautRuntimeGroovyVersion,
+                group:'io.micronaut',
+                names:['micronaut'],
+                modules:['runtime-groovy']
         ],
         'micronaut.spring': [
                 version: micronautSpringVersion,
@@ -85,6 +92,12 @@ ext {
             names  : ['directory-watcher'],
             modules: ['']
         ],
+        springLoaded: [
+            version: springLoadedVersion,
+            group  : 'org.springframework',
+            names  : ['springloaded'],
+            modules: ['']
+        ],
         async: [
             version: asyncVersion,
             group  : 'org.grails.plugins',
@@ -113,6 +126,12 @@ ext {
             version: testingSupportVersion,
             group  : 'org.grails',
             names  : ['grails-testing-support', 'grails-gorm-testing-support', 'grails-web-testing-support'],
+            modules: ['']
+        ],
+        h2: [
+            version: h2Version,
+            group  : 'com.h2database',
+            names  : ['h2'],
             modules: ['']
         ],
     ]
